--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="blog-container">
 
             <div class="bog">
-                <img src="images/blog-1 (2).jpeg" alt="">
+                <img src="blog-1 (2).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Kiatu kikuu</a></h2>
                 </div>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="bog">
-                <img src="images/blog-1 (7).jpeg" alt="">
+                <img src="blog-1 (7).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Chombo chaelea</a></h2>
                 </div>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="bog">
-                <img src="images/blog-1 (4).jpeg" alt="">
+                <img src="blog-1 (4).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Kheri njema</a></h2>
                 </div>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="bog">
-                <img src="images/blog-1 (3).jpeg" alt="">
+                <img src="blog-1 (3).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Kifo cha mende</a></h2>
                 </div>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="bog">
-                <img src="images/blog-1 (5).jpeg" alt="">
+                <img src="blog-1 (5).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Moyo wa choyo</a></h2>
                 </div>
@@ -128,7 +128,7 @@
             </div>
 
             <div class="bog">
-                <img src="images/blog-1 (6).jpeg" alt="">
+                <img src="blog-1 (6).jpeg" alt="">
                 <div class="blog-content">
                     <h2><a href="">Kipendaho roho</a></h2>
                 </div>
