--- a/index.html
+++ b/index.html
@@ -52,27 +52,63 @@
             <div class="container">
                 
                 <div class="box">
-                    <img src="html (1).jpg" alt="">
-                    <h3>HTML</h3>
-                    <p>I have a good undersanding of HTML tags</p>
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="html.png" alt="">
+                        </div>
+                        <h3>HTML</h3>
+                    </div>
+                    <p>I have a good understanding of HTML tags used in website development.</p>
                 </div>
 
                 <div class="box">
-                    <img src="css.jpg" alt="">
-                    <h3>CSS</h3>
-                    <p>Use CSS for styling the appearence of a website.</p>
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="css.svg" alt="">
+                        </div>
+                        <h3>CSS</h3>
+                    </div>
+                    <p>CSS is dynamic and I am enjoying different ways of stylying my Website. it's fun!</p>
                 </div>
 
                 <div class="box">
-                    <img src="JS.jpg" alt="">
-                    <h3>JS</h3>
-                    <p>I have a well understading of JS vanilla used for making the front end look good.</p>
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="mysql (1).png" alt="">
+                        </div>
+                        <h3>MySQL</h3>
+                    </div>
+                    <p>I am able to understand MySQL thanks to my prior knowledge in MS Database that I lerned in High school.</p>
                 </div>
 
                 <div class="box">
-                    <img src="MySQL.jpg" alt="">
-                    <h3>MySQL</h3>
-                    <p>Use MySQL for storing data for a website.</p>
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="java-script.png" alt="">
+                        </div>
+                        <h3>JS</h3>
+                    </div>
+                    <p>I use JS in DOM! I am still learning more. </p>
+                </div>
+
+                <div class="box">
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="excel.png" alt="">
+                        </div>
+                        <h3>EXECEL</h3>
+                    </div>
+                    <p>I have used Execel for diffrent uses in inventory management and so on...</p>
+                </div>
+
+                <div class="box">
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="php.png" alt="">
+                        </div>
+                        <h3>PHP</h3>
+                    </div>
+                    <p>Learning it for Back end development. I will be back with more!</p>
                 </div>
             </div>
         </div>
